--- a/index.html
+++ b/index.html
@@ -4,10 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>AbdulaClick</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
-    /* Все стили из твоего скрипта */
-    /* ... [оставлены без изменений, как в твоём коде] ... */
+    body {
+      background-color: #121212;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      padding: 20px;
+    }
+    #clickButton {
+      background: none;
+      border: none;
+      margin: 20px;
+    }
+    .click-icon {
+      width: 100px;
+    }
+    .balance-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 10px;
+      font-size: 24px;
+    }
+    .balance-box img {
+      width: 24px;
+      height: 24px;
+    }
+    #openShop, #openInventory {
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      background-color: #1e1e1e;
+      border: 1px solid #444;
+      color: #fff;
+      border-radius: 8px;
+    }
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+    .modal.hidden { display: none; }
+    .modal-content {
+      background: #1e1e1e;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      color: white;
+    }
+    .back {
+      background-color: transparent;
+      border: none;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+    .shop-tab {
+      margin: 5px;
+      padding: 10px;
+      border: 1px solid #444;
+      background-color: #222;
+      color: white;
+      border-radius: 8px;
+    }
+    .shop-item, .inventory-item {
+      background-color: #2c2c2c;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    button.buy, button.sell {
+      margin-top: 10px;
+      padding: 6px 12px;
+      background-color: #444;
+      color: white;
+      border: none;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
@@ -45,9 +131,130 @@
     </div>
   </div>
 
+  <audio id="clickSound" src="click.mp3"></audio>
+
   <script>
-    // Весь скрипт из твоего кода, объединённый, без изменений
-    // ... [скрипт здесь полностью включён] ...
+    let balance = parseInt(localStorage.getItem('balance')) || 0;
+    let clickPower = parseInt(localStorage.getItem('clickPower')) || 1;
+    let autoClicks = parseInt(localStorage.getItem('autoClicks')) || 0;
+    let inventory = JSON.parse(localStorage.getItem('inventory')) || [];
+
+    const clickButton = document.getElementById('clickButton');
+    const balanceSpan = document.getElementById('balance');
+    const shopModal = document.getElementById('shopModal');
+    const inventoryModal = document.getElementById('inventoryModal');
+    const shopContent = document.getElementById('shopContent');
+    const inventoryContent = document.getElementById('inventoryContent');
+    const clickSound = document.getElementById('clickSound');
+
+    function updateUI() {
+      balanceSpan.textContent = balance;
+      localStorage.setItem('balance', balance);
+      localStorage.setItem('clickPower', clickPower);
+      localStorage.setItem('autoClicks', autoClicks);
+      localStorage.setItem('inventory', JSON.stringify(inventory));
+    }
+
+    clickButton.addEventListener('click', () => {
+      balance += clickPower;
+      updateUI();
+      clickSound.play();
+    });
+
+    document.getElementById('openShop').onclick = () => shopModal.classList.remove('hidden');
+    document.getElementById('closeShop').onclick = () => shopModal.classList.add('hidden');
+    document.getElementById('openInventory').onclick = () => {
+      renderInventory();
+      inventoryModal.classList.remove('hidden');
+    };
+    document.getElementById('closeInventory').onclick = () => inventoryModal.classList.add('hidden');
+
+    const shopTabs = document.querySelectorAll('.shop-tab');
+    shopTabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        const tabType = tab.getAttribute('data-tab');
+        renderShop(tabType);
+      });
+    });
+
+    function renderShop(type) {
+      shopContent.innerHTML = '';
+      if (type === 'infiniteBoosts') {
+        for (let i = 1; i <= 10; i++) {
+          const price = 200;
+          const item = document.createElement('div');
+          item.className = 'shop-item';
+          item.innerHTML = `+${i} к клику — ${price} монет <br><button class="buy">Купить</button>`;
+          item.querySelector('button').onclick = () => {
+            if (balance >= price) {
+              balance -= price;
+              clickPower += i;
+              inventory.push({type: 'boost', power: i});
+              updateUI();
+            }
+          };
+          shopContent.appendChild(item);
+        }
+      } else if (type === 'timeBoosts') {
+        for (let i = 1; i <= 10; i++) {
+          const price = 30 * i;
+          const item = document.createElement('div');
+          item.className = 'shop-item';
+          item.innerHTML = `+${i} на 30 сек — ${price} монет <br><button class="buy">Купить</button>`;
+          item.querySelector('button').onclick = () => {
+            if (balance >= price) {
+              balance -= price;
+              clickPower += i;
+              setTimeout(() => {
+                clickPower -= i;
+                updateUI();
+              }, 30000);
+              updateUI();
+            }
+          };
+          shopContent.appendChild(item);
+        }
+      } else if (type === 'autoclickers') {
+        for (let i = 5; i <= 50; i += 5) {
+          const price = 1000 * (i / 5);
+          const item = document.createElement('div');
+          item.className = 'shop-item';
+          item.innerHTML = `+${i} автокликов — ${price} монет <br><button class="buy">Купить</button>`;
+          item.querySelector('button').onclick = () => {
+            if (balance >= price) {
+              balance -= price;
+              autoClicks += i;
+              updateUI();
+            }
+          };
+          shopContent.appendChild(item);
+        }
+      }
+    }
+
+    function renderInventory() {
+      inventoryContent.innerHTML = '';
+      inventory.forEach((item, index) => {
+        const div = document.createElement('div');
+        div.className = 'inventory-item';
+        div.innerHTML = `+${item.power} к клику <br><button class="sell">Продать</button>`;
+        div.querySelector('button').onclick = () => {
+          clickPower -= item.power;
+          balance += 100;
+          inventory.splice(index, 1);
+          updateUI();
+          renderInventory();
+        };
+        inventoryContent.appendChild(div);
+      });
+    }
+
+    setInterval(() => {
+      balance += autoClicks;
+      updateUI();
+    }, 1000);
+
+    updateUI();
   </script>
 </body>
 </html>
