--- a/index.html
+++ b/index.html
@@ -1,106 +1,325 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>AbdulaClick</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
-    /* ...весь CSS остаётся без изменений... */
+    body {
+      background-color: #121212;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      font-size: 2em;
+      margin: 0.5em 0;
+    }
+    #balance {
+      font-size: 1.5em;
+      margin: 0.5em 0;
+      color: #0f0;
+    }
+    #levelProgress {
+      width: 80%;
+      height: 10px;
+      margin: 10px auto;
+      background: #333;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+    #progressBar {
+      height: 100%;
+      width: 0%;
+      background: #00ff00;
+    }
+    #clickBtn {
+      font-size: 1.5em;
+      padding: 1em 2em;
+      background-color: #222;
+      color: #fff;
+      border: none;
+      border-radius: 20px;
+      margin-top: 1em;
+      cursor: pointer;
+      background-image: url('https://i.imgur.com/oK7GOrC.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 150px;
+      height: 150px;
+    }
+    .menu-btns {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin: 1em 0;
+      flex-wrap: wrap;
+    }
+    .menu-btns button {
+      padding: 0.5em 1em;
+      border-radius: 10px;
+      background: #1f1f1f;
+      color: #fff;
+      border: 1px solid #444;
+      cursor: pointer;
+    }
+    .store, .boosts, .autoclicks, .skins, .achievements, .leaderboard {
+      display: none;
+      position: fixed;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #1e1e1e;
+      padding: 1em;
+      border-radius: 15px;
+      width: 80%;
+      max-width: 400px;
+      z-index: 10;
+    }
+    .store h2, .boosts h2, .autoclicks h2, .skins h2, .achievements h2, .leaderboard h2 {
+      margin-top: 0;
+    }
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 5;
+    }
+    .store-item, .achievement, .leaderboard-entry {
+      padding: 0.5em;
+      border-bottom: 1px solid #333;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>AbdulaClick</h1>
-    <div class="balance-box">
-      <img src="coin.png" alt="Coin"> <span id="balance">0</span>
-    </div>
-    <button id="clickButton">
-      <img src="bearded.png" alt="Click Icon" class="click-icon" />
-    </button>
-    <br />
-    <button id="openShop">🛒 Магазин</button>
-    <button id="openInventory">📦 Приобретённые</button>
-    <button id="openAchievements">🏆 Достижения</button>
+  <h1>AbdulaClick</h1>
+  <div id="balance">Баланс: 0 монет</div>
+  <div id="level">Уровень: 1 (0 XP)</div>
+  <div id="levelProgress"><div id="progressBar"></div></div>
+  <button id="clickBtn"></button>
+
+  <div class="menu-btns">
+    <button onclick="openWindow('store')">🛒 Магазин</button>
+    <button onclick="openWindow('achievements')">🏆 Достижения</button>
+    <button onclick="openWindow('leaderboard')">📊 Лидеры</button>
   </div>
 
-  <!-- Модальные окна: Магазин, Инвентарь, Достижения -->
-  <div id="shopModal" class="modal hidden"> ... </div>
-  <div id="inventoryModal" class="modal hidden"> ... </div>
-  <div id="achievementsModal" class="modal hidden">
-    <div class="modal-content">
-      <button class="back" id="closeAchievements">← Назад</button>
-      <h2>Достижения</h2>
-      <ul id="achievementList" style="text-align:left"></ul>
-    </div>
+  <div class="overlay" id="overlay" onclick="closeWindows()"></div>
+
+  <div class="store" id="store">
+    <h2>Магазин</h2>
+    <div id="boosts"></div>
+    <div id="tempBoosts"></div>
+    <div id="autoclicks"></div>
   </div>
+
+  <div class="achievements" id="achievements">
+    <h2>Достижения</h2>
+    <div id="achievementList"></div>
+  </div>
+
+  <div class="leaderboard" id="leaderboard">
+    <h2>Топ игроков</h2>
+    <div id="leaderboardList"></div>
+  </div>
+
+  <audio id="clickSound" src="https://www.myinstants.com/media/sounds/pop-cat.mp3"></audio>
 
   <script>
-    let balance = parseInt(localStorage.getItem("balance")) || 0;
-    let boost = parseInt(localStorage.getItem("boost")) || 1;
-    let autoclick = parseInt(localStorage.getItem("autoclick")) || 0;
-    let purchasedItems = JSON.parse(localStorage.getItem("purchasedItems")) || {};
-    let achievements = JSON.parse(localStorage.getItem("achievements")) || {};
-    let totalClicks = parseInt(localStorage.getItem("totalClicks")) || 0;
+    let balance = 0;
+    let clickPower = 1;
+    let xp = 0;
+    let level = 1;
+    let boosts = 0;
+    let autoClickPower = 0;
+    let achievements = {};
+    let tempBoostsCooldown = {};
 
-    const balanceElem = document.getElementById("balance");
-    const clickBtn = document.getElementById("clickButton");
-    const audio = new Audio("click.mp3");
+    function saveState() {
+      localStorage.setItem('balance', balance);
+      localStorage.setItem('clickPower', clickPower);
+      localStorage.setItem('xp', xp);
+      localStorage.setItem('level', level);
+      localStorage.setItem('boosts', boosts);
+      localStorage.setItem('autoClickPower', autoClickPower);
+      localStorage.setItem('achievements', JSON.stringify(achievements));
+    }
 
-    function updateBalance() {
-      balanceElem.innerText = balance;
-      localStorage.setItem("balance", balance);
-      localStorage.setItem("boost", boost);
-      localStorage.setItem("autoclick", autoclick);
-      localStorage.setItem("purchasedItems", JSON.stringify(purchasedItems));
-      localStorage.setItem("achievements", JSON.stringify(achievements));
-      localStorage.setItem("totalClicks", totalClicks);
-      checkAchievements();
+    function loadState() {
+      balance = parseInt(localStorage.getItem('balance') || 0);
+      clickPower = parseInt(localStorage.getItem('clickPower') || 1);
+      xp = parseInt(localStorage.getItem('xp') || 0);
+      level = parseInt(localStorage.getItem('level') || 1);
+      boosts = parseInt(localStorage.getItem('boosts') || 0);
+      autoClickPower = parseInt(localStorage.getItem('autoClickPower') || 0);
+      achievements = JSON.parse(localStorage.getItem('achievements') || '{}');
+    }
+
+    function updateDisplay() {
+      document.getElementById('balance').textContent = `Баланс: ${balance} монет`;
+      document.getElementById('level').textContent = `Уровень: ${level} (${xp} XP)`;
+      const xpForNext = level * level * 100;
+      const percent = Math.min(100, (xp / xpForNext) * 100);
+      document.getElementById('progressBar').style.width = percent + '%';
+    }
+
+    function checkLevelUp() {
+      const xpForNext = level * level * 100;
+      if (xp >= xpForNext) {
+        xp -= xpForNext;
+        level++;
+        updateDisplay();
+        checkLevelUp();
+      }
+    }
+
+    function gainXP(amount) {
+      xp += amount;
+      checkLevelUp();
+      updateDisplay();
     }
 
     function checkAchievements() {
-      const list = document.getElementById("achievementList");
-      list.innerHTML = "";
-      const achievementDefs = [
-        { id: "click100", label: "Сделай 100 кликов", condition: () => totalClicks >= 100 },
-        { id: "balance1000", label: "Накопи 1000 монет", condition: () => balance >= 1000 },
-        { id: "boost10", label: "Получи 10+ к бусту", condition: () => boost >= 10 },
-        { id: "autoclick50", label: "Найди 50 автокликов", condition: () => autoclick >= 50 },
+      const list = [
+        { id: 'click1', name: 'Первый клик', condition: () => balance >= 1 },
+        { id: 'click100', name: 'Сотня!', condition: () => balance >= 100 },
+        { id: 'click1000', name: 'Тысяча кликов', condition: () => balance >= 1000 },
+        { id: 'rich', name: 'Богатей', condition: () => balance >= 10000 },
+        { id: 'booster', name: 'Бустер', condition: () => boosts >= 10 },
+        { id: 'auto', name: 'Автокликер', condition: () => autoClickPower > 0 },
       ];
-      achievementDefs.forEach(ach => {
-        if (ach.condition()) achievements[ach.id] = true;
-        const li = document.createElement("li");
-        li.textContent = `${ach.label} - ${achievements[ach.id] ? "✅ Выполнено" : "❌ Не выполнено"}`;
-        list.appendChild(li);
+      const achievementList = document.getElementById('achievementList');
+      achievementList.innerHTML = '';
+      for (const a of list) {
+        if (a.condition()) achievements[a.id] = true;
+        if (achievements[a.id]) {
+          const div = document.createElement('div');
+          div.className = 'achievement';
+          div.textContent = a.name;
+          achievementList.appendChild(div);
+        }
+      }
+    }
+
+    function updateLeaderboard() {
+      let data = JSON.parse(localStorage.getItem('leaderboard') || '[]');
+      const name = 'Вы';
+      data.push({ name, score: balance });
+      data.sort((a, b) => b.score - a.score);
+      data = data.slice(0, 10);
+      localStorage.setItem('leaderboard', JSON.stringify(data));
+
+      const list = document.getElementById('leaderboardList');
+      list.innerHTML = '';
+      data.forEach((entry, index) => {
+        const div = document.createElement('div');
+        div.className = 'leaderboard-entry';
+        div.textContent = `${index + 1}. ${entry.name}: ${entry.score}`;
+        list.appendChild(div);
       });
     }
 
-    clickBtn.addEventListener("click", () => {
-      balance += boost;
-      totalClicks++;
-      updateBalance();
-      audio.currentTime = 0;
-      audio.play();
-    });
-
-    // Остальной код createShopItems, showInventory, автоклик, открытие/закрытие окон — без изменений
-    document.getElementById("openAchievements").addEventListener("click", () => {
-      document.getElementById("achievementsModal").classList.remove("hidden");
+    function click() {
+      balance += clickPower;
+      gainXP(clickPower);
+      updateDisplay();
       checkAchievements();
-    });
-
-    document.getElementById("closeAchievements").addEventListener("click", () => {
-      document.getElementById("achievementsModal").classList.add("hidden");
-    });
-
-    if (autoclick > 0) {
-      setInterval(() => {
-        balance += autoclick;
-        updateBalance();
-      }, 1000);
+      updateLeaderboard();
+      saveState();
+      document.getElementById('clickSound').play();
     }
 
-    updateBalance();
+    function openWindow(id) {
+      document.getElementById('overlay').style.display = 'block';
+      document.querySelector(`.${id}`).style.display = 'block';
+    }
+
+    function closeWindows() {
+      document.getElementById('overlay').style.display = 'none';
+      document.querySelectorAll('.store, .achievements, .leaderboard').forEach(el => el.style.display = 'none');
+    }
+
+    function initStore() {
+      const boostsDiv = document.getElementById('boosts');
+      const tempBoostsDiv = document.getElementById('tempBoosts');
+      const autoClickDiv = document.getElementById('autoclicks');
+
+      for (let i = 1; i <= 10; i++) {
+        const b = document.createElement('div');
+        b.className = 'store-item';
+        b.innerHTML = `Пост. буст +${i} (цена: ${i * 200}) <button onclick="buyBoost(${i})">Купить</button>`;
+        boostsDiv.appendChild(b);
+
+        const t = document.createElement('div');
+        t.className = 'store-item';
+        t.innerHTML = `Врем. буст +${i} на 30с (цена: ${i * 30}) <button onclick="buyTempBoost(${i})">Купить</button>`;
+        tempBoostsDiv.appendChild(t);
+      }
+
+      for (let i = 5; i <= 50; i += 5) {
+        const a = document.createElement('div');
+        a.className = 'store-item';
+        a.innerHTML = `Автоклик +${i} (цена: ${i * 100}) <button onclick="buyAutoClick(${i})">Купить</button>`;
+        autoClickDiv.appendChild(a);
+      }
+    }
+
+    function buyBoost(amount) {
+      const cost = amount * 200;
+      if (balance >= cost) {
+        balance -= cost;
+        clickPower += amount;
+        boosts++;
+        updateDisplay();
+        saveState();
+      }
+    }
+
+    function buyTempBoost(amount) {
+      const cost = amount * 30;
+      if (balance >= cost && !tempBoostsCooldown[amount]) {
+        balance -= cost;
+        clickPower += amount;
+        updateDisplay();
+        tempBoostsCooldown[amount] = true;
+        setTimeout(() => {
+          clickPower -= amount;
+          tempBoostsCooldown[amount] = false;
+          updateDisplay();
+        }, 30000);
+        saveState();
+      }
+    }
+
+    function buyAutoClick(amount) {
+      const cost = amount * 100;
+      if (balance >= cost) {
+        balance -= cost;
+        autoClickPower += amount;
+        updateDisplay();
+        saveState();
+      }
+    }
+
+    setInterval(() => {
+      balance += autoClickPower;
+      gainXP(autoClickPower);
+      updateDisplay();
+      checkAchievements();
+      saveState();
+    }, 1000);
+
+    document.getElementById('clickBtn').addEventListener('click', click);
+    loadState();
+    updateDisplay();
+    checkAchievements();
+    updateLeaderboard();
+    initStore();
   </script>
 </body>
 </html>
